fix: back to top hover and main image overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -340,6 +340,7 @@ main {
 
 main .section {
   padding: 0 30px 65px;
+  overflow: hidden;
 }
 
 main pre {
